# UFOP

./: README.md
BCC201-Introdução_A_Programação/1° período/TP - 1° periodo/: QuebraCabecasDe8Pastilhas.c  TP.c  TP01 sem mod .c
BCC201-Introdução_A_Programação/2° periodo/Prática/: Infos.txt
BCC201-Introdução_A_Programação/3° período/Práticas/: q2.c
BCC201-Introdução_A_Programação/3° período/prog - exercicios resolvidos/: 03.c  4.c  atv16.c  atv19.c  atv6.c
BCC201-Introdução_A_Programação/Exercicios resolvidos para praticar/: atv1.c  atv3.c  atv8.c
BCC201/1° período/TP - 1° periodo/: Rascunho TP.txt  exe  tp2.c
BCC201/3° período/: finaA.c
BCC201/3° período/Práticas/: ex3.c  q1.c  (+1 more)
BCC201/Exercicios resolvidos para praticar/: atv4.c
BCC202-EstruturaDeDados_1/Exemplos de cada matéria/: AVL.c  caminhamentoEmArvores.c  countingSort.c  enderAbe.c  exemploHash.c  exemploPilhaLabir.c  funcao_heapConstroi.c  heap.c  heapBinariaDeBusca.c  pesquisaBinaria.c  pesquisaSequencial.c  radixSort.c  rotacaoSimples.c
BCC203-EstruturaDeDados_2/Trabalhos_Práticos/ED2_TP2/: .gitignore  CMakeLists.txt  README.md
BCC203-EstruturaDeDados_2/Trabalhos_Práticos/ED2_TP2/src/: intercalacao.h  intercalacaoInterna.c  intercalacaoInterna.h  lista.h  main.c  quicksortExterno.c  quicksortExterno.h  quicksortInterno.c  quicksortInterno.h  util.c  util.h
BCC265-Eletrônica_Para_Computação/Trabalho de Implementação/: implementação.rar
BCC325-Inteligência Artificial/Estudo Dirigido/: Estudo_Dirigido01-Juliana (2).ipynb
BCC325-Inteligência Artificial/estudoDirigido2/: labirinto_ia.py
(+170 files in other folders)
